[package]
name = "rust-web"
version = "0.1.0"
authors = ["Sebastian Matias Segura <segurasebastian7887@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.0.2"
diesel = "1.4.5"
