[package]
name = "rust-web"
version = "0.1.0"
authors = ["Sebastian Matias Segura <segurasebastian7887@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.0.2"
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.57"
